--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,7 @@ h1::after {
     }
 }
 
+
 @media (min-width: 720px) {
     main {
         width: 95%;
@@ -448,3 +449,6 @@ h1::after {
         width: 85%;
     }
 }
+
+/*for login form*/
+
